zerocopy-derive/tests/ui-nightly/derive_transparent.stderr
error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-nightly/derive_transparent.rs:33:18
   |
33 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromBytes);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `FromBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required for `TransparentStruct<NotZerocopy>` to implement `FromBytes`
  --> tests/ui-nightly/derive_transparent.rs:23:19
   |
23 | #[derive(AsBytes, FromBytes, Unaligned)]
   |                   ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> tests/ui-nightly/derive_transparent.rs:33:1
   |
33 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromBytes);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the derive macro `FromBytes` which comes from the expansion of the macro `assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: AsBytes` is not satisfied
  --> tests/ui-nightly/derive_transparent.rs:34:18
   |
34 | assert_impl_all!(TransparentStruct<NotZerocopy>: AsBytes);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `AsBytes`:
             ()
             AU16
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
           and $N others
note: required for `TransparentStruct<NotZerocopy>` to implement `AsBytes`
  --> tests/ui-nightly/derive_transparent.rs:23:10
   |
23 | #[derive(AsBytes, FromBytes, Unaligned)]
   |          ^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> tests/ui-nightly/derive_transparent.rs:34:1
   |
34 | assert_impl_all!(TransparentStruct<NotZerocopy>: AsBytes);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the derive macro `AsBytes` which comes from the expansion of the macro `assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: Unaligned` is not satisfied
  --> tests/ui-nightly/derive_transparent.rs:35:18
   |
35 | assert_impl_all!(TransparentStruct<NotZerocopy>: Unaligned);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Unaligned` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `Unaligned`:
             ()
             F32<O>
             F64<O>
             I128<O>
             I16<O>
             I32<O>
             I64<O>
             ManuallyDrop<T>
           and $N others
note: required for `TransparentStruct<NotZerocopy>` to implement `Unaligned`
  --> tests/ui-nightly/derive_transparent.rs:23:30
   |
23 | #[derive(AsBytes, FromBytes, Unaligned)]
   |                              ^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> tests/ui-nightly/derive_transparent.rs:35:1
   |
35 | assert_impl_all!(TransparentStruct<NotZerocopy>: Unaligned);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_impl_all`
   = note: this error originates in the derive macro `Unaligned` which comes from the expansion of the macro `assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)
